[package]
name = "azure-bastion-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.8"
azure_identity = "0.9"
azure_mgmt_network = "0.9"
clap = { version = "4", features = ["derive"] }
futures = { version = "0.3" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "signal",
    "rt-multi-thread",
    "rt",
    "net",
    "macros",
] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
url = "2.3.1"
